--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
+    "use-react-countries": "^2.0.0",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "fs": false
   },
   "scripts": {
     "start": "react-scripts start",
